@@ -1,3 +1,10 @@
+2007-01-10  Jan Arne Petersen  <jpetersen@jpetersen.org>
+
+	Fixes #395083
+
+	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_open): added
+	missing NULL-check.
+
 2007-01-08  Jan Arne Petersen  <jpetersen@jpetersen.org>
 
 	Fixes #173035
